<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="auto_add">自动选择</string>
    <string name="locale_city">定位当前城市</string>
    <string name="head_add">手动选择</string>
    
    <string name="filter_hint">输入城市名称</string>
    
    <string name="set_city">设置城市</string>
    
    <string name="change_city">设置城市</string>
    <string name="update_weather">更新天气</string>
    <string name="wallpaper">壁纸</string>
    
    <string name="wallpaper_text01">青色小路</string>
    <string name="wallpaper_text02">夕日晚霞</string>
    <string name="wallpaper_text03">深色海洋</string>
    <string name="wallpaper_text04">魔幻古堡</string>
    
    <string-array name="text_view">
        <item >首页</item>
        <item >消息</item>
        <item >朋友</item>
        <item >广场</item>
        <item >更多</item>
    </string-array>
    
    <string-array name="title_list">
        <item >北京</item>
        <item >上海</item>
        <item >广州</item>
        <item >郑州</item>
        <item >平顶山</item>
    </string-array>
    
    <string name="today">2011年11月30日（星期三）</string>
    <string name="tomorrow">明天</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="today_lunar">农历冬月初六</string>
    <string name="beijing">北京</string>
    <string name="temperature">13℃~10℃</string>
    <string name="tomorrow_temperature">14℃~6℃</string>
    <string name="day_after_tomorrow_temperature">13℃~5℃</string>
    <string name="sunshine">晴</string>
    <string name="cloudy">多云</string>
    <string name="wind">北风小于3级</string>
    <string name="advise">建议着薄型套装或牛仔衫裤等春秋过渡装。年老体弱者宜着套装、夹克衫等。</string>

</resources>