<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:text="@string/auto_add" />
    
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gps_view" />

    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:text="@string/head_add" />
          
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        
        <!-- 显示所有支持的的省份与城市的列表框 -->
        <ExpandableListView
            android:id="@+id/provinceList"
            android:drawSelectorOnTop="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/filterField" />
        
        <!-- 快捷查找城市的过滤框 -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filterField"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:hint="@string/filter_hint" />
    </RelativeLayout>
    
</LinearLayout>