<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    android:background="@drawable/app_bg02" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/item_top" />
    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/item_bg">
        <TextView
            android:id="@+id/date_y"
            android:text="@string/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/date"
            android:text="@string/today_lunar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:background="@drawable/top_bar">
            <TextView
                android:text="@string/beijing"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:id="@+id/cityField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
            <TextView
                android:text="@string/temperature"
                android:textSize="24sp"
                android:textColor="@color/gold"
                android:textColorHighlight="@color/lightgoldenrodyellow"
                android:textColorHint="@color/darkgoldenrod"
                android:id="@+id/currentTemp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" />
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/weather_icon01"
                android:src="@drawable/weathericon_condition_01"
                android:contentDescription="@string/app_name"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical" >
                <TextView
                    android:text="@string/sunshine"
                    android:id="@+id/currentWeather"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_width="fill_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />
                <TextView
                    android:text="@string/wind"
                    android:id="@+id/currentWind"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        
		<TextView
			android:layout_width="fill_parent"
			android:singleLine="true"
			android:scrollHorizontally="true"
			android:focusableInTouchMode="true"
			android:ellipsize="marquee"
			android:padding="5dp"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:text=""
			android:id="@+id/index_d"
			android:focusable="true"
			android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:background="@drawable/item_mid">

		<TextView
		    android:text="@string/tomorrow"
		    android:textColor="@color/snow"
		    android:textSize="16sp"
		    android:gravity="center_horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" />
		<TextView
		    android:text="@string/day_after_tomorrow"
		    android:textColor="@color/snow"
		    android:textSize="16sp"
		    android:gravity="center_horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:layout_weight="1"
        android:background="@drawable/item_bg" >
		
		<LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/weather_icon02"
                    android:contentDescription="@string/app_name"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:src="@drawable/weathericon_condition_02" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather02"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/snow"
                    android:textSize="14sp"
                    android:text="@string/cloudy"
                    android:src="@drawable/weathericon_condition_02" />
            </LinearLayout>
            <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/temp02"
               android:gravity="center_horizontal"
               android:textColor="@color/snow"
               android:textSize="14sp"
               android:text="@string/tomorrow_temperature" />
            <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/wind02"
               android:gravity="center_horizontal"
               android:textColor="@color/snow"
               android:textSize="14sp"
               android:text="@string/wind" />
        </LinearLayout>
        
        <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/weather_icon03"
                    android:contentDescription="@string/app_name"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:src="@drawable/weathericon_condition_02" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather03"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/snow"
                    android:textSize="14sp"
                    android:text="@string/cloudy" />
            </LinearLayout>
            <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/temp03"
               android:gravity="center_horizontal"
               android:textColor="@color/white"
               android:textSize="14sp"
               android:text="@string/day_after_tomorrow_temperature" />
            <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/wind03"
               android:gravity="center_horizontal"
               android:textColor="@color/snow"
               android:textSize="14sp"
               android:text="@string/wind" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@drawable/item_foot" />
    
</LinearLayout>